get page text on click

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,8 @@
 
 </head>
 <body>
-    <h1>Link Connect</h1>
+    <h1>Text-To-Speech</h1>
+    <textarea></textarea>
 </body>
+<script src="script.js" ></script>
 </html>
