--- a/popup.html
+++ b/popup.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" type="text/css" >
 
 </head>
-<body>
-    <h1>Text-To-Speech</h1>
-    <textarea></textarea>
+<body class="popup" >
+    <h1 class="popuptitle" >Text-To-Speech</h1>
 </body>
 <script src="script.js" ></script>
 </html>
